mobile layout bug correction

--- a/docs/css/debug/style.css
+++ b/docs/css/debug/style.css
@@ -949,7 +949,6 @@ html {
   min-height: 100vh;
   width: 100%;
   max-width: 100vw;
-  overflow-x: hidden;
 }
 
 body {
