--- a/src/scss/modules-core/_sm-layoutBase.scss
+++ b/src/scss/modules-core/_sm-layoutBase.scss
@@ -9,7 +9,6 @@ html {
   min-height: 100vh;
   width: 100%;
   max-width: 100vw;
-  overflow-x: hidden;
 }
 
 body {
